--- a/javascript-prc/pokemon/index.html
+++ b/javascript-prc/pokemon/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pokemon</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The-Pokémon Cards</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div style="display: flex;">
+  <h1>The-Pokémon Cards</h1>
+  <form id="pokemonForm">
     <label>
-      <form>
-        <input type="number" name="Category"  id="inputBox">
-      <select id="dropDown">
-        <option>Fire</option>
-        <option>Water</option>
-        <option>Earth</option>
-        <option>Forest</option>
-      </select>
-  
-      <button>GET</button>
-      </form>
+      Number of Cards:
+      <input type="number" id="numCards" min="1" required />
     </label>
-  </div>
+    <label>
+      Category:
+      <select id="category">
+        <option value="all">All</option>
+        <option value="grass">Grass</option>
+        <option value="fire">Fire</option>
+        <option value="water">Water</option>
+        <option value="electric">Electric</option>
+      </select>
+    </label>
+    <button type="submit">Show Cards</button>
+  </form>
+
+  <div class="card-container" id="cardContainer"></div>
 
   <script src="script.js"></script>
 </body>
