--- a/javascript-prc/Quiz/index.html
+++ b/javascript-prc/Quiz/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz App</title>
 </head>
+
 <body>
   <div>
     <label>
-      <h1 id="questions"></h1>
+      <h1 id="questionCon"></h1>
     </label>
     <label>
       <p>
-        <input type="radio" id="option1"/>
+        <input type="radio" id="option1" />
       </p>
       <p>
-        <input type="radio" id="option2"/>
+        <input type="radio" id="option2" />
       </p>
       <p>
-        <input type="radio" id="option3"/>
+        <input type="radio" id="option3" />
       </p>
       <p>
-        <input type="radio" id="option4"/>
+        <input type="radio" id="option4" />
       </p>
     </label>
     <label>
       <button id="submitBtn">Submit</button>
     </label>
-    
-    
   </div>
-  
+
 </body>
+<script src="script.js"></script>
+
 </html>
